testdata/baselines/reference/submodule/conformance/derivedClassOverridesProtectedMembers3.errors.txt
derivedClassOverridesProtectedMembers3.ts(22,7): error TS2415: Class 'Derived1' incorrectly extends base class 'Base'.
  Property 'a' is protected in type 'Derived1' but public in type 'Base'.
derivedClassOverridesProtectedMembers3.ts(27,7): error TS2415: Class 'Derived2' incorrectly extends base class 'Base'.
  Property 'b' is protected in type 'Derived2' but public in type 'Base'.
derivedClassOverridesProtectedMembers3.ts(32,7): error TS2415: Class 'Derived3' incorrectly extends base class 'Base'.
  Property 'c' is protected in type 'Derived3' but public in type 'Base'.
derivedClassOverridesProtectedMembers3.ts(37,7): error TS2415: Class 'Derived4' incorrectly extends base class 'Base'.
  Property 'c' is protected in type 'Derived4' but public in type 'Base'.
derivedClassOverridesProtectedMembers3.ts(42,7): error TS2415: Class 'Derived5' incorrectly extends base class 'Base'.
  Property 'd' is protected in type 'Derived5' but public in type 'Base'.
derivedClassOverridesProtectedMembers3.ts(47,7): error TS2417: Class static side '{ new(a: { foo: string; }): Derived6; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; r: { foo: string; }; prototype: Derived6; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
  Property 'r' is protected in type '{ new(a: { foo: string; }): Derived6; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; r: { foo: string; }; prototype: Derived6; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
derivedClassOverridesProtectedMembers3.ts(52,7): error TS2417: Class static side '{ new(a: { foo: string; }): Derived7; r: { foo: string; }; t: { foo: string; }; u: (a: { foo: string; }) => void; s: (a: { foo: string; }) => void; prototype: Derived7; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
  Property 's' is protected in type '{ new(a: { foo: string; }): Derived7; r: { foo: string; }; t: { foo: string; }; u: (a: { foo: string; }) => void; s: (a: { foo: string; }) => void; prototype: Derived7; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
derivedClassOverridesProtectedMembers3.ts(57,7): error TS2417: Class static side '{ new(a: { foo: string; }): Derived8; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; readonly t: { foo: string; }; prototype: Derived8; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
  Property 't' is protected in type '{ new(a: { foo: string; }): Derived8; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; readonly t: { foo: string; }; prototype: Derived8; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
derivedClassOverridesProtectedMembers3.ts(62,7): error TS2417: Class static side '{ new(a: { foo: string; }): Derived9; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; t: { foo: string; }; prototype: Derived9; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
  Property 't' is protected in type '{ new(a: { foo: string; }): Derived9; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; t: { foo: string; }; prototype: Derived9; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
derivedClassOverridesProtectedMembers3.ts(67,7): error TS2417: Class static side '{ new(a: { foo: string; }): Derived10; r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Derived10; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
  Property 'u' is protected in type '{ new(a: { foo: string; }): Derived10; r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Derived10; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.


==== derivedClassOverridesProtectedMembers3.ts (10 errors) ====
    var x: { foo: string; }
    var y: { foo: string; bar: string; }
    
    class Base {
        a: typeof x;
        b(a: typeof x) { }
        get c() { return x; }
        set c(v: typeof x) { }
        d: (a: typeof x) => void;
    
        static r: typeof x;
        static s(a: typeof x) { }
        static get t() { return x; }
        static set t(v: typeof x) { }
        static u: (a: typeof x) => void;
    
        constructor(a: typeof x) {}
    }
    
    // Errors
    // decrease visibility of all public members to protected
    class Derived1 extends Base {
          ~~~~~~~~
!!! error TS2415: Class 'Derived1' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'a' is protected in type 'Derived1' but public in type 'Base'.
        protected a: typeof x;
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived2 extends Base {
          ~~~~~~~~
!!! error TS2415: Class 'Derived2' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'b' is protected in type 'Derived2' but public in type 'Base'.
        protected b(a: typeof x) { }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived3 extends Base {
          ~~~~~~~~
!!! error TS2415: Class 'Derived3' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'c' is protected in type 'Derived3' but public in type 'Base'.
        protected get c() { return x; }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived4 extends Base {
          ~~~~~~~~
!!! error TS2415: Class 'Derived4' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'c' is protected in type 'Derived4' but public in type 'Base'.
        protected set c(v: typeof x) { }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived5 extends Base {
          ~~~~~~~~
!!! error TS2415: Class 'Derived5' incorrectly extends base class 'Base'.
!!! error TS2415:   Property 'd' is protected in type 'Derived5' but public in type 'Base'.
        protected d: (a: typeof x) => void ;
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived6 extends Base {
          ~~~~~~~~
!!! error TS2417: Class static side '{ new(a: { foo: string; }): Derived6; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; r: { foo: string; }; prototype: Derived6; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
!!! error TS2417:   Property 'r' is protected in type '{ new(a: { foo: string; }): Derived6; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; r: { foo: string; }; prototype: Derived6; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
        protected static r: typeof x;
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived7 extends Base {
          ~~~~~~~~
!!! error TS2417: Class static side '{ new(a: { foo: string; }): Derived7; r: { foo: string; }; t: { foo: string; }; u: (a: { foo: string; }) => void; s: (a: { foo: string; }) => void; prototype: Derived7; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
!!! error TS2417:   Property 's' is protected in type '{ new(a: { foo: string; }): Derived7; r: { foo: string; }; t: { foo: string; }; u: (a: { foo: string; }) => void; s: (a: { foo: string; }) => void; prototype: Derived7; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
        protected static s(a: typeof x) { }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived8 extends Base {
          ~~~~~~~~
!!! error TS2417: Class static side '{ new(a: { foo: string; }): Derived8; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; readonly t: { foo: string; }; prototype: Derived8; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
!!! error TS2417:   Property 't' is protected in type '{ new(a: { foo: string; }): Derived8; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; readonly t: { foo: string; }; prototype: Derived8; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
        protected static get t() { return x; }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived9 extends Base {
          ~~~~~~~~
!!! error TS2417: Class static side '{ new(a: { foo: string; }): Derived9; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; t: { foo: string; }; prototype: Derived9; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
!!! error TS2417:   Property 't' is protected in type '{ new(a: { foo: string; }): Derived9; r: { foo: string; }; s: (a: { foo: string; }) => void; u: (a: { foo: string; }) => void; t: { foo: string; }; prototype: Derived9; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
        protected static set t(v: typeof x) { }
        constructor(a: typeof x) { super(a); }
    }
    
    class Derived10 extends Base {
          ~~~~~~~~~
!!! error TS2417: Class static side '{ new(a: { foo: string; }): Derived10; r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Derived10; }' incorrectly extends base class static side '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
!!! error TS2417:   Property 'u' is protected in type '{ new(a: { foo: string; }): Derived10; r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Derived10; }' but public in type '{ r: { foo: string; }; s: (a: { foo: string; }) => void; t: { foo: string; }; u: (a: { foo: string; }) => void; prototype: Base; }'.
        protected static u: (a: typeof x) => void ;
        constructor(a: typeof x) { super(a); }
    }